--- a/index.html
+++ b/index.html
@@ -322,14 +322,15 @@
             align-items: center;
             overflow-x: auto;
             -webkit-overflow-scrolling: touch;
-            scrollbar-width: none; /* Firefox */
-            -ms-overflow-style: none; /* IE and Edge */
+            scrollbar-width: none;
+            -ms-overflow-style: none;
             white-space: nowrap;
-            max-width: calc(100vw - 200px); /* Adjust based on logo width */
+            max-width: calc(100vw - 200px);
+            touch-action: pan-x;
         }
 
         .main-nav::-webkit-scrollbar {
-            display: none; /* Chrome, Safari, Opera */
+            display: none;
         }
 
         .main-nav li {
@@ -348,6 +349,7 @@
             position: relative;
             font-weight: bold;
             letter-spacing: 0.2px;
+            -webkit-tap-highlight-color: transparent;
         }
 
         .main-nav a:hover {
@@ -384,15 +386,21 @@
                 margin: 0;
                 gap: 0.2rem;
                 justify-content: flex-start;
+                overflow-x: scroll;
+                -webkit-overflow-scrolling: touch;
+                scroll-snap-type: x mandatory;
+                scroll-behavior: smooth;
             }
             .main-nav li {
                 flex: 0 0 auto;
+                scroll-snap-align: start;
             }
             .main-nav a {
                 padding: 0.5rem 0.8rem;
                 font-size: 0.95rem;
                 background-color: transparent;
                 border-radius: 12px;
+                touch-action: pan-x;
             }
             body {
                 padding-top: 120px;
@@ -402,6 +410,7 @@
         @media (max-width: 480px) {
             .main-nav {
                 padding: 0.3rem 0;
+                gap: 0.1rem;
             }
             .main-nav a {
                 padding: 0.4rem 0.6rem;
@@ -536,22 +545,30 @@
                     isDown = true;
                     startX = e.touches[0].pageX - nav.offsetLeft;
                     scrollLeft = nav.scrollLeft;
-                });
+                }, { passive: true });
 
                 nav.addEventListener('touchend', () => {
                     isDown = false;
-                });
+                }, { passive: true });
 
                 nav.addEventListener('touchmove', (e) => {
                     if (!isDown) return;
-                    e.preventDefault();
                     const x = e.touches[0].pageX - nav.offsetLeft;
                     const walk = (x - startX) * 2;
                     nav.scrollLeft = scrollLeft - walk;
-                });
+                }, { passive: true });
 
                 // Set initial cursor style
                 nav.style.cursor = 'grab';
+
+                // Handle window resize
+                window.addEventListener('resize', () => {
+                    if (window.innerWidth <= 900) {
+                        nav.style.overflowX = 'scroll';
+                    } else {
+                        nav.style.overflowX = 'auto';
+                    }
+                });
             } catch (error) {
                 console.error("Error in navigation setup:", error);
             }
@@ -559,9 +576,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
