--- a/index.html
+++ b/index.html
@@ -301,14 +301,6 @@
     <div class="logo">
         <img src="Screenshot 2025-03-26 222326.png" alt="College Sports Hub Logo">
     </div>
-
-    <ul class="main-nav">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="booking.html">Slot Booking</a></li>
-       
-    </ul>
-
     <div class="hamburger" onclick="toggleMenu()">
         <div></div>
         <div></div>
@@ -316,6 +308,9 @@
     </div>
 
     <div class="hamburger-menu">
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
+        <a href="booking.html">Slot Booking</a>
         <a href="team.html">Find a Team</a>
         <a href="tournaments.html">Upcoming Tournaments</a>
         <a href="contact.html">Contact Us</a>
