--- a/booking.html
+++ b/booking.html
@@ -44,11 +44,13 @@
         }
 
         .header {
-            background: var(--primary);
+            background: #1a237e;
             color: white;
             padding: 25px;
             text-align: center;
-            border-bottom: 4px solid var(--secondary);
+            border-bottom: 4px solid #283593;
+            position: relative;
+            z-index: 100;
         }
 
         .header h1 {
@@ -56,6 +58,7 @@
             font-size: 28px;
             font-weight: 600;
             letter-spacing: 0.5px;
+            color: white;
         }
 
         .header h2 {
@@ -63,6 +66,7 @@
             font-size: 16px;
             font-weight: 400;
             opacity: 0.9;
+            color: white;
         }
 
         .content {
