--- a/booking.html
+++ b/booking.html
@@ -44,13 +44,11 @@
         }
 
         .header {
-            background: #1a237e;
+            background: var(--primary);
             color: white;
             padding: 25px;
             text-align: center;
-            border-bottom: 4px solid #283593;
-            position: relative;
-            z-index: 100;
+            border-bottom: 4px solid var(--secondary);
         }
 
         .header h1 {
@@ -58,7 +56,6 @@
             font-size: 28px;
             font-weight: 600;
             letter-spacing: 0.5px;
-            color: white;
         }
 
         .header h2 {
@@ -66,7 +63,6 @@
             font-size: 16px;
             font-weight: 400;
             opacity: 0.9;
-            color: white;
         }
 
         .content {
