--- a/team.html
+++ b/team.html
@@ -9,17 +9,7 @@
     <script src="nav.js"></script>
     <script src="common.js"></script>
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            line-height: 1.6;
-        }
+        /* Remove nav and body padding/margin rules here. Let nav.css handle it. */
         /* Navigation */
         nav {
             background-color: #0a2342;
@@ -512,29 +502,16 @@
     </style>
 </head>
 <body onload="checkLogin()">
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <img src="logo.jpg" alt="College Sports Hub Logo">
-        </div>
-        <ul class="main-nav" id="mainNav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="booking.html">Slot Booking</a></li>
-            <li><a href="team.html" class="active">Find a Team</a></li>
-            <li><a href="tournaments.html">Tournaments</a></li>
-            <li><a href="rules.html">Rules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="details.html">Details</a></li>
-            <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
-        </ul>
-        <div class="hamburger" onclick="toggleMenu(event)">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </nav>
-    <div id="nav-backdrop"></div>
+    <!-- Include the standardized navigation -->
+    <div id="nav-placeholder"></div>
+    <script>
+        // Load the navigation
+        fetch('nav.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('nav-placeholder').innerHTML = data;
+            });
+    </script>
 
     <!-- Main Content -->
     <div class="container">
