--- a/contact.html
+++ b/contact.html
@@ -6,20 +6,22 @@
     <title>Contact - College Sports Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav.css">
-    <script src="common.js"></script>
     <script src="nav.js"></script>
+    <script src="common.js"></script>
     <script>
         function checkLogin() {
-            const user = localStorage.getItem("loggedInUser");
+            let user = localStorage.getItem("loggedInUser");
             if (!user) {
+                alert("You are not logged in. Redirecting to login page.");
                 window.location.href = "login.html";
             } else {
-                document.getElementById("logoutNav").style.display = "block";
+                document.getElementById("logoutNav").style.display = "inline";
             }
         }
 
         function logout() {
             localStorage.removeItem("loggedInUser");
+            alert("You have successfully logged out.");
             window.location.href = "login.html";
         }
 
@@ -110,33 +112,33 @@
 
         /* Navigation Bar */
         nav {
-            background-color: #0a2342;
+            background-color: #00274D;
             color: white;
-            padding: 0 1rem;
+            padding: 15px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 90px !important;
-            min-height: 90px !important;
-            border-bottom: 1px solid #e0e6ed;
             position: relative;
             z-index: 1000;
-            box-shadow: none;
+            height: 130px !important;
+            min-height: 130px !important;
+            padding-top: 0 !important;
+            padding-bottom: 0 !important;
         }
 
         .logo {
-            height: 60px;
+            height: 120px !important;
+            max-height: 120px !important;
             width: auto;
             display: flex;
             align-items: center;
-            justify-content: center;
             flex-shrink: 0;
             margin-right: 10px;
-            transition: none;
         }
 
         .logo img {
-            height: 60px;
+            height: 120px !important;
+            max-height: 120px !important;
             width: auto;
             max-width: 100%;
             object-fit: contain;
@@ -144,98 +146,140 @@
 
         .main-nav {
             display: flex;
-            gap: 0.5rem;
+            gap: 20px;
             list-style: none;
             margin: 0;
             padding: 0;
-            flex-shrink: 0;
-            align-items: center;
         }
 
         .main-nav a {
             text-decoration: none;
-            color: #f4f6fa;
-            font-size: 1rem;
-            padding: 0.7rem 1.1rem;
-            border-radius: 0.2rem;
-            transition: background 0.2s, color 0.2s;
-            white-space: nowrap;
-            display: block;
-            position: relative;
-            font-weight: 500;
-            letter-spacing: 0.2px;
+            color: white;
+            font-size: 16px;
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: 0.3s;
         }
 
         .main-nav a:hover {
-            background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
-            transform: none;
+            background-color: #004080;
         }
 
         .main-nav a.active {
-            background-color: #17335c;
-            color: #e0e6ed;
-            box-shadow: none;
+            background-color: #004080;
         }
 
-        .main-nav a.active::after {
+        /* Hamburger Menu */
+        .hamburger {
             display: none;
+            cursor: pointer;
+            padding: 10px;
+            z-index: 10001;
+        }
+
+        .hamburger span {
+            display: block;
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            margin: 5px 0;
+            transition: all 0.3s ease;
+        }
+
+        .hamburger-menu {
+            display: none;
+            position: absolute;
+            top: 70px;
+            right: 20px;
+            background: #00274D;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+            z-index: 999;
+        }
+
+        .hamburger-menu.active {
+            display: block;
+        }
+
+        .hamburger-menu a {
+            display: block;
+            padding: 15px 20px;
+            color: white;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .hamburger-menu a:hover {
+            background: #00509E;
         }
 
         @media (max-width: 900px) {
             nav {
-                flex-direction: column;
+                padding: 0.5rem 1rem;
                 height: auto !important;
                 min-height: auto !important;
-                padding: 0.5rem;
             }
-            .logo {
-                margin-bottom: 0.5rem;
+
+            .logo, .logo img {
+                height: 100px !important;
+                max-height: 100px !important;
             }
+
+            .hamburger {
+                display: block;
+                position: absolute;
+                right: 20px;
+                top: 20px;
+            }
+
             .main-nav {
-                width: 100%;
-                overflow-x: auto;
-                overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                padding: 0.5rem 0;
-                justify-content: flex-start;
-                gap: 0.2rem;
-                scrollbar-width: none; /* Firefox */
-                -ms-overflow-style: none; /* IE and Edge */
+                display: none;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                background-color: #0a2342;
+                padding: 1rem;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             }
-            .main-nav::-webkit-scrollbar {
-                display: none; /* Chrome, Safari, Opera */
+
+            .main-nav.active {
+                display: flex;
             }
+
             .main-nav li {
-                flex: 0 0 auto;
+                width: 100%;
+                text-align: center;
             }
+
             .main-nav a {
-                padding: 0.5rem 0.8rem;
-                font-size: 0.95rem;
-                background-color: transparent;
-                border-radius: 12px;
+                display: block;
+                padding: 0.8rem;
+                width: 100%;
             }
-            .main-nav a:hover, .main-nav a.active {
-                background-color: #17335c;
-                color: #e0e6ed;
+
+            /* Hamburger Animation */
+            .hamburger.active span:nth-child(1) {
+                transform: rotate(45deg) translate(5px, 5px);
+            }
+
+            .hamburger.active span:nth-child(2) {
+                opacity: 0;
+            }
+
+            .hamburger.active span:nth-child(3) {
+                transform: rotate(-45deg) translate(7px, -6px);
             }
         }
-        @media (max-width: 480px) {
-            .main-nav a {
-                padding: 0.3rem 0.5rem;
-                font-size: 0.85rem;
+
+        @media (max-width: 600px) {
+            .logo, .logo img {
+                height: 80px !important;
+                max-height: 80px !important;
             }
-        }
-        #nav-backdrop {
-            display: none;
-            position: fixed;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.3);
-            z-index: 1099;
-        }
-        #nav-backdrop.active {
-            display: block;
         }
 
         /* Main Content */
@@ -618,7 +662,12 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-            <img src="logo.jpg" alt="College Sports Hub Logo">
+            <img src="Screenshot 2025-03-26 222326.png" alt="College Sports Hub Logo">
+        </div>
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
         <ul class="main-nav" id="mainNav">
             <li><a href="index.html">Home</a></li>
@@ -627,17 +676,11 @@
             <li><a href="team.html">Find a Team</a></li>
             <li><a href="tournaments.html">Tournaments</a></li>
             <li><a href="rules.html">Rules</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="details.html">Details</a></li>
             <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
         </ul>
-        <div class="hamburger" onclick="toggleMenu(event)">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
     </nav>
-    <div id="nav-backdrop"></div>
 
     <div class="container">
         <h1>Contact Us</h1>
@@ -738,41 +781,58 @@
     </div>
 
     <script>
-        // Navigation functions
-        function toggleMenu(e) {
-            e.stopPropagation();
-            document.getElementById('mainNav').classList.toggle('active');
-            document.getElementById('nav-backdrop').classList.toggle('active');
-        }
+        document.addEventListener('DOMContentLoaded', function() {
+            try {
+                // Hamburger menu functionality
+                const hamburger = document.getElementById('hamburger');
+                const mainNav = document.getElementById('mainNav');
+                
+                hamburger.addEventListener('click', function() {
+                    hamburger.classList.toggle('active');
+                    mainNav.classList.toggle('active');
+                });
 
-        function closeMenu() {
-            document.getElementById('mainNav').classList.remove('active');
-            document.getElementById('nav-backdrop').classList.remove('active');
-        }
+                // Close menu when clicking outside
+                document.addEventListener('click', function(event) {
+                    const isClickInsideNav = mainNav.contains(event.target);
+                    const isClickOnHamburger = hamburger.contains(event.target);
+                    
+                    if (!isClickInsideNav && !isClickOnHamburger && mainNav.classList.contains('active')) {
+                        hamburger.classList.remove('active');
+                        mainNav.classList.remove('active');
+                    }
+                });
 
-        document.querySelectorAll('.main-nav a').forEach(link => {
-            link.addEventListener('click', closeMenu);
-        });
+                // Close menu when clicking a link
+                const navLinks = document.querySelectorAll('.main-nav a');
+                navLinks.forEach(link => {
+                    link.addEventListener('click', () => {
+                        if (window.innerWidth <= 900) {
+                            hamburger.classList.remove('active');
+                            mainNav.classList.remove('active');
+                        }
+                    });
+                });
 
-        window.addEventListener('resize', function() {
-            if(window.innerWidth > 900) closeMenu();
-        });
+                // Add active class to current page link
+                const currentPage = window.location.pathname.split('/').pop();
+                navLinks.forEach(link => {
+                    if (link.getAttribute('href') === currentPage) {
+                        link.classList.add('active');
+                    }
+                });
 
-        window.addEventListener('scroll', closeMenu);
-
-        function checkLogin() {
-            const user = localStorage.getItem("loggedInUser");
-            if (!user) {
-                window.location.href = "login.html";
-            } else {
-                document.getElementById("logoutNav").style.display = "block";
+                // Handle window resize
+                window.addEventListener('resize', () => {
+                    if (window.innerWidth > 900) {
+                        hamburger.classList.remove('active');
+                        mainNav.classList.remove('active');
+                    }
+                });
+            } catch (error) {
+                console.error("Error in navigation setup:", error);
             }
-        }
-
-        function logout() {
-            localStorage.removeItem("loggedInUser");
-            window.location.href = "login.html";
-        }
+        });
 
         document.getElementById('contactForm').addEventListener('submit', function(e) {
             e.preventDefault();
