--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,12 @@
 <!-- Navigation Bar -->
 <nav>
-     <div class="logo">
-            <img src="logo.jpg" alt="College Sports Hub Logo">
-        </div>
+    <div class="logo">
+        <img src="Screenshot 2025-03-26 222326.png" alt="College Sports Hub Logo">
+    </div>
+    <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
     <ul class="main-nav" id="mainNav">
         <li><a href="index.html">Home</a></li>
@@ -15,203 +19,238 @@
         <li><a href="details.html">Details</a></li>
         <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
     </ul>
-    <div class="hamburger" onclick="toggleMenu(event)">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
 </nav>
-<div id="nav-backdrop"></div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Add active class to current page link
-        const currentPage = window.location.pathname.split('/').pop();
-        const navLinks = document.querySelectorAll('.main-nav a');
-        navLinks.forEach(link => {
-            if (link.getAttribute('href') === currentPage) {
-                link.classList.add('active');
-            }
-        });
-
-        // Add smooth scrolling to navigation
-        const nav = document.querySelector('.main-nav');
-        let isDown = false;
-        let startX;
-        let scrollLeft;
-
-        nav.addEventListener('mousedown', (e) => {
-            isDown = true;
-            nav.style.cursor = 'grabbing';
-            startX = e.pageX - nav.offsetLeft;
-            scrollLeft = nav.scrollLeft;
-        });
-
-        nav.addEventListener('mouseleave', () => {
-            isDown = false;
-            nav.style.cursor = 'grab';
-        });
-
-        nav.addEventListener('mouseup', () => {
-            isDown = false;
-            nav.style.cursor = 'grab';
-        });
-
-        nav.addEventListener('mousemove', (e) => {
-            if (!isDown) return;
-            e.preventDefault();
-            const x = e.pageX - nav.offsetLeft;
-            const walk = (x - startX) * 2;
-            nav.scrollLeft = scrollLeft - walk;
-        });
-
-        // Touch events for mobile
-        nav.addEventListener('touchstart', (e) => {
-            isDown = true;
-            startX = e.touches[0].pageX - nav.offsetLeft;
-            scrollLeft = nav.scrollLeft;
-        });
-
-        nav.addEventListener('touchend', () => {
-            isDown = false;
-        });
-
-        nav.addEventListener('touchmove', (e) => {
-            if (!isDown) return;
-            e.preventDefault();
-            const x = e.touches[0].pageX - nav.offsetLeft;
-            const walk = (x - startX) * 2;
-            nav.scrollLeft = scrollLeft - walk;
-        });
-    });
-</script>
 
 <style>
-    /* Navigation Styles */
+    /* Navigation Bar */
     nav {
         background-color: #00274D;
         color: white;
-        padding: 0 1.25rem;
+        padding: 15px 20px;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        position: relative;
+        z-index: 1000;
         height: 130px !important;
         min-height: 130px !important;
         padding-top: 0 !important;
         padding-bottom: 0 !important;
-        position: relative;
-        z-index: 1000;
     }
 
     .logo {
-        height: 4.5rem;
+        height: 120px !important;
+        max-height: 120px !important;
+        width: auto;
         display: flex;
         align-items: center;
         flex-shrink: 0;
+        margin-right: 10px;
     }
 
     .logo img {
-        height: 3.2rem;
+        height: 120px !important;
+        max-height: 120px !important;
         width: auto;
         max-width: 100%;
+        object-fit: contain;
     }
 
     .main-nav {
         display: flex;
-        gap: 1.25rem;
+        gap: 20px;
         list-style: none;
         margin: 0;
         padding: 0;
-        flex-shrink: 0;
-        align-items: center;
     }
 
     .main-nav a {
         text-decoration: none;
         color: white;
-        font-size: 1.1rem;
-        padding: 1rem 1.5rem;
-        border-radius: 0.4rem;
-        transition: background 0.2s;
-        white-space: nowrap;
+        font-size: 16px;
+        padding: 10px 15px;
+        border-radius: 5px;
+        transition: 0.3s;
+    }
+
+    .main-nav a:hover {
+        background-color: #004080;
+    }
+
+    .main-nav a.active {
+        background-color: #004080;
+    }
+
+    /* Hamburger Menu */
+    .hamburger {
+        display: none;
+        cursor: pointer;
+        padding: 10px;
+        z-index: 10001;
+    }
+
+    .hamburger span {
+        display: block;
+        width: 25px;
+        height: 3px;
+        background-color: white;
+        margin: 5px 0;
+        transition: all 0.3s ease;
+    }
+
+    .hamburger-menu {
+        display: none;
+        position: absolute;
+        top: 70px;
+        right: 20px;
+        background: #00274D;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
+        z-index: 999;
+    }
+
+    .hamburger-menu.active {
         display: block;
     }
 
-    .main-nav a:hover, .main-nav a.active {
-        background-color: #003366;
+    .hamburger-menu a {
+        display: block;
+        padding: 15px 20px;
+        color: white;
+        text-decoration: none;
+        transition: 0.3s;
     }
 
-    /* Mobile Navigation Styles */
+    .hamburger-menu a:hover {
+        background: #00509E;
+    }
+
     @media (max-width: 900px) {
         nav {
-            flex-direction: column;
+            padding: 0.5rem 1rem;
             height: auto !important;
             min-height: auto !important;
-            padding: 0.5rem;
         }
 
-        .logo {
-            margin-bottom: 0.5rem;
+        .logo, .logo img {
+            height: 100px !important;
+            max-height: 100px !important;
+        }
+
+        .hamburger {
+            display: block;
+            position: absolute;
+            right: 20px;
+            top: 20px;
         }
 
         .main-nav {
-            width: 100%;
-            overflow-x: auto;
-            overflow-y: hidden;
-            -webkit-overflow-scrolling: touch;
-            padding: 0.5rem 0;
-            justify-content: flex-start;
-            gap: 0.5rem;
-            scrollbar-width: none; /* Firefox */
-            -ms-overflow-style: none; /* IE and Edge */
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background-color: #0a2342;
+            padding: 1rem;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        .main-nav::-webkit-scrollbar {
-            display: none; /* Chrome, Safari, Opera */
+        .main-nav.active {
+            display: flex;
         }
 
         .main-nav li {
-            flex: 0 0 auto;
+            width: 100%;
+            text-align: center;
         }
 
         .main-nav a {
-            padding: 0.5rem 1rem;
-            font-size: 0.9rem;
-            white-space: nowrap;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
+            display: block;
+            padding: 0.8rem;
+            width: 100%;
         }
 
-        .main-nav a.active {
-            background-color: #003366;
+        /* Hamburger Animation */
+        .hamburger.active span:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
         }
-    }
 
-    @media (max-width: 480px) {
-        .main-nav a {
-            padding: 0.4rem 0.8rem;
-            font-size: 0.85rem;
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
         }
-    }
 
-    /* Make the logo bigger in the navigation bar */
-    nav .logo, .logo img {
-        height: 120px !important;
-        max-height: 120px !important;
-        width: auto;
-    }
-
-    @media (max-width: 900px) {
-        nav .logo, .logo img {
-            height: 100px !important;
-            max-height: 100px !important;
+        .hamburger.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -6px);
         }
     }
 
     @media (max-width: 600px) {
-        nav .logo, .logo img {
+        .logo, .logo img {
             height: 80px !important;
             max-height: 80px !important;
         }
     }
-</style> 
+</style>
+
+<script>
+    function toggleMenu() {
+        const menu = document.querySelector('.hamburger-menu');
+        menu.classList.toggle('active');
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        try {
+            // Hamburger menu functionality
+            const hamburger = document.getElementById('hamburger');
+            const mainNav = document.getElementById('mainNav');
+            
+            hamburger.addEventListener('click', function() {
+                hamburger.classList.toggle('active');
+                mainNav.classList.toggle('active');
+            });
+
+            // Close menu when clicking outside
+            document.addEventListener('click', function(event) {
+                const isClickInsideNav = mainNav.contains(event.target);
+                const isClickOnHamburger = hamburger.contains(event.target);
+                
+                if (!isClickInsideNav && !isClickOnHamburger && mainNav.classList.contains('active')) {
+                    hamburger.classList.remove('active');
+                    mainNav.classList.remove('active');
+                }
+            });
+
+            // Close menu when clicking a link
+            const navLinks = document.querySelectorAll('.main-nav a');
+            navLinks.forEach(link => {
+                link.addEventListener('click', () => {
+                    if (window.innerWidth <= 900) {
+                        hamburger.classList.remove('active');
+                        mainNav.classList.remove('active');
+                    }
+                });
+            });
+
+            // Add active class to current page link
+            const currentPage = window.location.pathname.split('/').pop();
+            navLinks.forEach(link => {
+                if (link.getAttribute('href') === currentPage) {
+                    link.classList.add('active');
+                }
+            });
+
+            // Handle window resize
+            window.addEventListener('resize', () => {
+                if (window.innerWidth > 900) {
+                    hamburger.classList.remove('active');
+                    mainNav.classList.remove('active');
+                }
+            });
+        } catch (error) {
+            console.error("Error in navigation setup:", error);
+        }
+    });
+</script> 
