--- a/rules.html
+++ b/rules.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav.css">
     <script src="nav.js"></script>
+    <script src="common.js"></script>
     <script>
         function checkLogin() {
             let user = localStorage.getItem("loggedInUser");
@@ -25,6 +26,7 @@
         }
     </script>
     <style>
+        /* Remove nav and body padding/margin rules here. Let nav.css handle it. */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -378,29 +380,16 @@
     </style>
 </head>
 <body onload="checkLogin()">
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <img src="logo.jpg" alt="College Sports Hub Logo">
-        </div>
-        <ul class="main-nav" id="mainNav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="booking.html">Slot Booking</a></li>
-            <li><a href="team.html">Find a Team</a></li>
-            <li><a href="tournaments.html">Tournaments</a></li>
-            <li><a href="rules.html" class="active">Rules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="details.html">Details</a></li>
-            <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
-        </ul>
-        <div class="hamburger" onclick="toggleMenu(event)">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </nav>
-    <div id="nav-backdrop"></div>
+    <!-- Include the standardized navigation -->
+    <div id="nav-placeholder"></div>
+    <script>
+        // Load the navigation
+        fetch('nav.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('nav-placeholder').innerHTML = data;
+            });
+    </script>
 
     <!-- Rules & Regulations Section -->
     <div class="container">
